--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   database: apphera_community_development
   pool: 5
   username: root
-  password: 
+  password: hallo123
   host: 127.0.0.1
 
 production:
@@ -13,7 +13,7 @@ production:
   database: apphera_community_production
   pool: 25 
   username: root
-  password: 
+  password: hallo123
   host: 127.0.0.1
 
 test:
@@ -22,5 +22,5 @@ test:
   database: apphera_community_test
   pool: 5
   username: root
-  password: 
+  password: hallo123
   host: 127.0.0.1
